@@ -655,6 +655,7 @@ try_again:
 	}
 
 	if (!get_http_headers(stream, &http_headers, &http_header_size TSRMLS_CC)) {
+		efree(http_headers);
 		if (request != buf) {efree(request);}
 		php_stream_close(stream);
 		zend_hash_del(Z_OBJPROP_P(this_ptr), "httpsocket", sizeof("httpsocket"));
@@ -690,6 +691,7 @@ try_again:
 		if (http_status == 100) {
 			efree(http_headers);
 			if (!get_http_headers(stream, &http_headers, &http_header_size TSRMLS_CC)) {
+				efree(http_headers);
 				if (request != buf) {efree(request);}
 				php_stream_close(stream);
 				zend_hash_del(Z_OBJPROP_P(this_ptr), "httpsocket", sizeof("httpsocket"));
